# diff-match-patch

./: .gitignore
python3/: dmp.py  pyproject.toml  usage.py
python3/tests/: input1.txt  input2.txt
