[tool.poetry]
name = "diff_match_patch_cli"
version = "0.1.0"
description = ""
authors = ["kobibarhanin"]


[tool.poetry.dependencies]
python = "^3.7"
mdv = "^1.7.4"
html2markdown = "^0.1.7"
markdownify = "^0.5.3"
rich = "^9.2.0"
click = "^7.1.2"


[tool.poetry.dev-dependencies]
diagrams = "^0.17.0"
pylint = "^2.6.0"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
